# SER_PRO

./: .gitignore  CMakeLists.txt
minisat/core/: Solver.cc
minisat/mtl/: IntTypes.h
minisat/utils/: Options.h
src/: CMakeLists.txt
src/headers/: aiger.h  constants.h  definitions.h  logicMaskSAT.h  reConvergenceSAT.h  tools.h
src/sources/: aiger.c  logicMaskSAT.cpp  main.cpp  reConvergenceSAT.cpp  tools.cpp
